math-core/tests/snapshots/conversion_test__sum_pointless_limits.snap
---
source: math-core/tests/conversion_test.rs
expression: "\\sum\\limits n"
---
<math>
    <mo movablelimits="false" lspace="0">∑</mo>
    <mi>n</mi>
</math>
