math-core/tests/snapshots/conversion_test__sum_prime.snap
---
source: math-core/tests/conversion_test.rs
expression: "\\sum'"
---
<math>
    <mover>
        <mo lspace="0">∑</mo>
        <mo>′</mo>
    </mover>
</math>
