math-core/tests/snapshots/conversion_test__sum_with_limit.snap
---
source: math-core/tests/conversion_test.rs
expression: "\\sum\\limits_{i=1}^N"
---
<math>
    <munderover>
        <mo movablelimits="false" lspace="0">∑</mo>
        <mrow>
            <mi>i</mi>
            <mo lspace="0" rspace="0">=</mo>
            <mn>1</mn>
        </mrow>
        <mi>N</mi>
    </munderover>
</math>
