math-core/tests/snapshots/conversion_test__super_subscript.snap
---
source: math-core/tests/conversion_test.rs
expression: x_3^2
---
<math>
    <msubsup>
        <mi>x</mi>
        <mn>3</mn>
        <mn>2</mn>
    </msubsup>
</math>
