math-core/tests/snapshots/conversion_test__superscript.snap
---
source: math-core/tests/conversion_test.rs
expression: x^2
---
<math>
    <msup>
        <mi>x</mi>
        <mn>2</mn>
    </msup>
</math>
